lazy lookupでの訳文対応

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,9 @@
 en:
-  edit_book: Editing book
+  books:
+    new:
+      title: New Book
+    edit:
+      title: Editing book
   confirm: Are you sure?
   flash:
     new: "%{model} was successfully created."
