--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -9,6 +9,11 @@ ja:
         memo: メモ
         picture: 画像
         title: 題名
+  books:
+    new:
+      title: 新規書籍
+    edit:
+      title: 書籍編集
   helpers:
     submit:
       create: 登録
@@ -18,10 +23,8 @@ ja:
     update: "%{model}を更新しました。"
     destroy: "%{model}を削除しました。"
   new: 追加
-  new_book: 新規書籍
   show: 表示
   edit: 編集
-  edit_book: 書籍編集
   destroy: 削除
   back: 戻る
   confirm: 本当によろしいですか？
