英語版ローカライズの追加

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,14 @@
 en:
+  activerecord:
+    models:
+      book: Book
+
+    attributes:
+      book:
+        author: Author
+        memo: Memo
+        picture: Picture
+        title: Title
   books:
     new:
       title: New Book
