フォローの統計情報追加

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -238,3 +238,7 @@ ja:
     registrations:
       edit:
         title: "アカウント編集"
+  users:
+    show:
+      following: "フォロー"
+      followers: "フォロワー"
