フォローフォロワー一覧の追加

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -242,3 +242,7 @@ ja:
     show:
       following: "フォロー"
       followers: "フォロワー"
+    index_following:
+      title: "フォロー一覧"
+    index_follow:
+      title: "フォロワー一覧"
