followingとfollowersコントローラーの分割

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -242,7 +242,9 @@ ja:
     show:
       following: "フォロー"
       followers: "フォロワー"
-    index_following:
-      title: "フォロー一覧"
-    index_follow:
-      title: "フォロワー一覧"
+    following:
+      index:
+        title: "フォロー一覧"
+    followers:
+      index:
+        title: "フォロワー一覧"
